# digital-registrar-research

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/: dspy_ollama_gemma3.yaml  dspy_ollama_gemma4.yaml  dspy_ollama_gptoss.yaml  dspy_ollama_medgemmalarge.yaml  dspy_ollama_medgemmasmall.yaml  dspy_ollama_qwen3_5.yaml  eval_endpoints.yaml  multirun_gpt_oss.yaml  organ_code.yaml
configs/ablations/: axes.yaml  grid_1.yaml  grid_2.yaml  smoke.yaml
doc/eval/: ci_methods.md  completeness.md  glossary.md  index.md  methods_citations.md  multiple_comparisons.md  nested_metrics.md  non_nested_metrics.md  recipes.md
docs/: ablations.md  ablations_design_rationale.md  annotation.md  benchmarks.md  branching_strategy.md  data.md  dspy_ollama_model_compatibility.md  experiment_protocol.md  index.md  literature_review.md  pipeline.md  schemas.md
docs/benchmarks/: 01_data_layout.md  02_train_bert.md  03_run_baselines.md  04_evaluate.md  05_compare.md  06_methods.md  README.md
docs/eval/: confusion_pairs.md  glossary.md  (+8 more)
dummy/: README.md
packaging/: README.txt  _build_common.ps1  _build_common.sh  build_unix_multi.bat  build_unix_multi.sh  build_unix_single.bat  build_unix_single.sh  build_windows_multi.bat  build_windows_multi.sh  build_windows_single.bat  build_windows_single.sh  build_windows_single_kpc.bat  build_windows_zip.sh  precompute_section_groups.py  run.bat  run_dummy_unlocked_multi.bat  run_dummy_unlocked_multi.sh  run_dummy_unlocked_single.bat  run_dummy_unlocked_single.sh  run_dummy_unlocked_single_kpc.bat  run_workspace_locked_multi.bat  run_workspace_locked_multi.sh  run_workspace_locked_single.bat  run_workspace_locked_single.sh  run_workspace_locked_single_kpc.bat
scripts/: _config_loader.py  _run_id.py  clear_dummy_skeleton.py  diff_against_slim.py  gen_dummy_skeleton.py  launch_annotator.py  launch_annotator_dummy.py  launch_annotator_workspace.py  pathhelper.py  pathhelper2.py  predict_clinicalbert_cls_mac.py  run_dspy_ollama_multirun.py  run_dspy_ollama_multirun_smoke.py  run_dspy_ollama_single.py  run_dspy_ollama_smoke.py  run_gpt_oss_multirun.py  run_inference_smoke.py  select_without_preann_subset.py
tests/: test_annotation_io.py  test_eval_metrics.py  test_eval_scope.py  test_organs.py  test_schema_concordance.py  test_schema_parser.py  test_schemas_loader.py
(+9538 files in other folders)
